--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="create_book_save">Save</string>
     <string name="create_book_notes">Notes</string>
     <string name="add_book_button">Add</string>
+    <string name="edit_book_title">Edit Book</string>
 </resources>
