--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_create_book">Add book</string>
-    <string name="create_new_book_title">Create new book</string>
+    <string name="add_book_title">Add book</string>
     <string name="create_book_title_hint">Title</string>
     <string name="create_book_author_hint">Author</string>
     <string name="create_book_page_count_hint">Total Pages</string>
